# Google-Conversational-Agents-WhatsApp-Python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flowchart.excalidraw  pyproject.toml  requirements.txt  run.py
src/: ca_client.py  config.py  gemini_client.py  main.py  models.py  queue.py  security.py  whatsapp_client.py  worker.py
